--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-flask==2.3.2
-requests==2.31.0
 pyjwt==2.8.0
+Flask[async]
+requests
+aiohttp
+pycryptodome
+protobuf
+protobuf_decoder
+googleapis-common-protos
+gunicorn
+Werkzeug
