--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
-pyjwt==2.8.0
-Flask[async]
-requests
-aiohttp
-pycryptodome
-protobuf
-protobuf_decoder
-googleapis-common-protos
-gunicorn
-Werkzeug
+Flask==2.0.1
+requests==2.26.0
+PyJWT==2.1.0
